--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "prisma": "^3.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
